--- a/Frontend/Probando/Probando/Views/Test/Login.cshtml
+++ b/Frontend/Probando/Probando/Views/Test/Login.cshtml
@@ -1,48 +1,44 @@
 ﻿@model Probando.Models.LoginModel
-@{
-    ViewBag.Title = "Login";
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 }
 
-<div class="panel panel-body">
+<div class="col-md-9">
 
-    <div class="col-md-9">
-
-        <form id="myForm">
-            <div class="form-group">
-                <div class="col-md-12">
-                    <h4>Login Here</h4>
-                </div>
+    <form id="myForm">
+        <div class="form-group">
+            <div class="col-md-12">
+                <h4>Iniciar Sesión:</h4>
             </div>
-
-
-            <div class="form-group">
-                <div class="col-md-12">
-                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = "EmailId" })
-                </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-12">
+                @Html.TextBoxFor(m => m.usuario, new { @class = "form-control", @placeholder = "Usuario" })
             </div>
-            <div class="form-group">
-                <div class="col-md-12">
-                    @Html.PasswordFor(m => m.UserPassword, new { @class = "form-control", @placeholder = "Password" })
-                </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-12">
+                @Html.PasswordFor(m => m.password, new { @class = "form-control", @placeholder = "Password" })
             </div>
-            <div class="form-group">
-                <div class="col-md-12">
-                    <a href="#" class="btn btn-primary " onclick="LoginUser()" style="margin-top:2%;">Submit</a>
-                </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-12">
+                <a class="btn btn-primary " onclick="LoginUser()" style="margin-top:2%;">Enviar</a>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
-
 <script>
 
-    var LoginUser = function () {
+    var Login = function () {
         debugger
         var data = $("#myForm").serialize();
 
         $.ajax({
             type: "Post",
-            url: "/Test/LoginUser",
+            url: "../Home",
             data: data,
             success: function (response) {
                 debugger
@@ -67,6 +63,5 @@
 
 
     }
-
 </script>
 
