--- a/Frontend/Probando/Probando/Views/Test/Login.cshtml
+++ b/Frontend/Probando/Probando/Views/Test/Login.cshtml
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-12">
-                <a class="btn btn-primary " onclick="LoginUser()" style="margin-top:2%;">Enviar</a>
+                <a class="btn btn-primary " style="margin-top:2%;" onclick=@Html.ActionLink("Iniciar", "LoginUser") </a>
             </div>
         </div>
     </form>
